Fix book image display, and cell spacing

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     width: 100%;
 }
 
+
 html {
     height: 100%;
     padding: 0;
@@ -54,7 +55,8 @@ html {
     transform-origin: 0px 0px;
     -webkit-transform-origin: 0px 0px;
     border: 2px solid red;
-    margin: 10% !important;
+
+
     padding: 0;
 }
 
@@ -82,21 +84,22 @@ td {
 }
 .bookImage{
     position: relative;
-    padding:100% 0 0 0;
-    margin: 0;
-    width: 50%;
-    padding-bottom: 75%;
+    height: auto;
     float: right;
+    width: 44%;
+    margin:0;
+  padding-bottom: 56.25%;
     border: 2px solid rgb(85, 0, 243);
+    overflow: hidden;
+    
 }
 .bookImage img {
-    position: relative;
-    height: auto !important;
-    margin: 0;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  width: 50%; height: auto;
+
 }
 
 .authors {
